--- a/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
+++ b/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
@@ -1,4 +1,4 @@
-% Created 2020-10-16 sex 18:14
+% Created 2020-10-23 sex 15:16
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
   \usepackage{csquotes, caption}
@@ -16,9 +16,9 @@
 
 
 \section{Introdução}
-\label{sec:orgbe60328}
+\label{sec:org2273f79}
 
-\begin{frame}[label={sec:org6f4d8d6}]{Estrutura de tópicos e convenções}
+\begin{frame}[label={sec:orgf045947}]{Estrutura de tópicos e convenções}
 A aula terá a seguinte estrutura
 
 \begin{itemize}
@@ -34,9 +34,9 @@ A aula terá a seguinte estrutura
 \end{frame}
 
 \section{O cenário internacional, o setor externo e a herança maldita}
-\label{sec:orgcbaaa4b}
+\label{sec:org0077b80}
 
-\begin{frame}[label={sec:orgd160acf}]{Panorama Internacional}
+\begin{frame}[label={sec:orge7801ed}]{Panorama Internacional}
 \begin{itemize}
 \item Crise Mexicana (1994/5)
 \item Brasileira (1998/9)
@@ -44,7 +44,7 @@ A aula terá a seguinte estrutura
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7934b47}]{Crescimento e desequilíbrios globais}
+\begin{frame}[label={sec:org8e0b58b}]{Crescimento e desequilíbrios globais}
 Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâmico e desequiblibrado entre 2002/3 a 2007/8
 
 \alert{Engrenagem comercial com 3 elos}
@@ -67,7 +67,7 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgce83e4c}]{A Herança Maldita}
+\begin{frame}[label={sec:org1c7957d}]{A Herança Maldita}
 \begin{itemize}
 \item Instabilidade macroeconômica
 \begin{itemize}
@@ -85,9 +85,9 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 
 
 \section{Governos Lula e suas fases}
-\label{sec:org160dc60}
+\label{sec:orgc2dabcb}
 
-\begin{frame}[label={sec:orgfc50a4c}]{Primeira Fase}
+\begin{frame}[label={sec:orgd9c9938}]{Primeira Fase}
 Experimento desenvolvimentista junto de uma política macroeconômica conservadora:
 \begin{itemize}
 \item Continuidade do tripé
@@ -105,7 +105,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \alert{Contexto de transição complexa:} desconfiança dos credores e pressões financeiras
 \end{frame}
 
-\begin{frame}[label={sec:org33d0d28}]{Segunda fase}
+\begin{frame}[label={sec:org766c185}]{Segunda fase}
 \begin{itemize}
 \item Retomada do Estado como elemento condutor do Crescimento
 \item Desenho da política fiscal no centro de proposta do desenvolvimento
@@ -116,7 +116,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{frame}
 
 
-\begin{frame}[label={sec:orgdd9e16e}]{Fatores determinantes}
+\begin{frame}[label={sec:orgc20794d}]{Fatores determinantes}
 \begin{itemize}
 \item Impulsos externos favoráveis
 \begin{itemize}
@@ -137,7 +137,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2104c7e}]{Alguns resultados}
+\begin{frame}[label={sec:org09ba64e}]{Alguns resultados}
 \begin{itemize}
 \item Queda da taxa de desemprego aberta
 \item Valorização real do salário mínimo
@@ -156,9 +156,9 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 
 
 \section{(Des)Continuidades e dificuldades}
-\label{sec:org0f655ea}
+\label{sec:org1d5c1aa}
 
-\begin{frame}[label={sec:org0b5fffc}]{Continuidades}
+\begin{frame}[label={sec:org206cca3}]{Continuidades}
 \begin{block}{Política cambial}
 Pouco mudou ao longo do tempo
 
@@ -190,7 +190,7 @@ Não foi alterado o regime fiscal definido na era FHC
 \end{frame}
 
 
-\begin{frame}[label={sec:org6499bb7}]{Descontinuidades}
+\begin{frame}[label={sec:org95532d0}]{Descontinuidades}
 Conjugação de políticas de incentivo à renda e ao mercado interno
 
 \begin{itemize}
@@ -210,7 +210,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc9dada9}]{Dificuldades}
+\begin{frame}[label={sec:orge8369cb}]{Dificuldades}
 \begin{itemize}
 \item Limites do crescimento com expansão da demanda de consumo via crédito e políticas sociais
 \item Retomada da taxa de investimento, mas nível baixo
@@ -223,12 +223,12 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 \section{Governo(s?) Dilma}
-\label{sec:org5b63e1e}
+\label{sec:org234cc0b}
 
-\begin{frame}[label={sec:org7ce2f36}]{Os três tenores}
+\begin{frame}[label={sec:org753619e}]{Os três tenores}
 \end{frame}
 
-\begin{frame}[label={sec:org5d09368}]{Medidas macroprudenciais}
+\begin{frame}[label={sec:orgab4d20d}]{Medidas macroprudenciais}
 \alert{Medidas macroprudenciais:*} Redução do crescimento do crédito.
 
 \begin{itemize}
@@ -249,7 +249,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:org5c81e71}]{Desaceleração rudimentar I}
+\begin{frame}[label={sec:org01713a0}]{Desaceleração rudimentar I}
 \begin{center}
 \begin{tabular}{lll}
 \hline
@@ -264,7 +264,7 @@ Taxa de desemprego & 9.0\% & 5.4\%\\
 \alert{Principal mudança:} do incentivo à demanda agregada ao incetivo ao investimento privado.
 \end{frame}
 
-\begin{frame}[label={sec:org6297a0c}]{Desaceleração rudimentar II}
+\begin{frame}[label={sec:orgc68190e}]{Desaceleração rudimentar II}
 \begin{table}[htbp]
 \caption{Consumo das famílias}
 \centering
@@ -280,7 +280,7 @@ Renda disponível real das famílias & 5,3\% & 1,2\%\\
 \end{table}
 \end{frame}
 
-\begin{frame}[label={sec:org4261af2}]{Desaceleração rudimentar III}
+\begin{frame}[label={sec:orgd09a927}]{Desaceleração rudimentar III}
 \begin{table}[htbp]
 \caption{Política fiscal}
 \centering
@@ -296,22 +296,22 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org133caeb}]{Prêambulo para a ópera do fim do mundo}
+\begin{frame}[label={sec:org88a33b9}]{Prêambulo para a ópera do fim do mundo}
 \href{./opera.jpg}{Brasil, o Golpe: A Ópera do fim do mundo - Flávio Tavares}
 \end{frame}
 
 \section{Idade das trevas}
-\label{sec:org92aa18d}
+\label{sec:org0bc2d7f}
 
 \section{Dados}
-\label{sec:org2bb013d}
+\label{sec:orgcf705bd}
 
-\begin{frame}[label={sec:orgbf3cefd}]{Índice EMBI Brasil (Fim de período)}
+\begin{frame}[label={sec:orge8252f8}]{Índice EMBI Brasil (Fim de período)}
 \end{frame}
 
 
 
-\begin{frame}[label={sec:orgb39cdad}]{O ciclo das commodities}
+\begin{frame}[label={sec:org9de1d7e}]{O ciclo das commodities}
 \begin{figure}[htb]
 \centering
 \caption{Índice de Commodities - Brasil\\Média móvel 12 meses} 
@@ -321,11 +321,11 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org980509a}]{O ciclo de liquidez internacional para países emergentes}
+\begin{frame}[label={sec:org98f2f0f}]{O ciclo de liquidez internacional para países emergentes}
 \alert{Dado:} IIF (?)
 \end{frame}
 
-\begin{frame}[label={sec:org05c3d31}]{Evolução das reservas internacionais líquidas}
+\begin{frame}[label={sec:orgc5e5e0e}]{Evolução das reservas internacionais líquidas}
 \begin{figure}[htb]
 \centering
 \caption{Reservas Internacionais} 
@@ -336,16 +336,16 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:orgd056b72}]{PIB puxado pelo mercado doméstico}
+\begin{frame}[label={sec:org31c69c6}]{PIB puxado pelo mercado doméstico}
 \alert{Dado:} Decomposição do crescimento (doméstico e exportações líquidas)
 \end{frame}
 
-\begin{frame}[label={sec:org0dbe2ae}]{Crescimento e o investimento induzido}
+\begin{frame}[label={sec:org787a09f}]{Crescimento e o investimento induzido}
 \alert{Dado:} Decomposição do crescimento (Todos os componentes da demanda)
 \end{frame}
 
 
-\begin{frame}[label={sec:org89fd3f6}]{Saldo de Crédito}
+\begin{frame}[label={sec:org31ce4c7}]{Saldo de Crédito}
 \begin{figure}[htb]
 \centering
 \caption{Saldo de Crédito\\em \% do PIB} 
@@ -356,7 +356,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc633c6c}]{Emprego}
+\begin{frame}[label={sec:org46953ec}]{Emprego}
 \begin{figure}[htb]
 \centering
 \caption{Índice do Emprego Formal} 
@@ -367,7 +367,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org61f3e00}]{Evolução dos rendimentos (I)}
+\begin{frame}[label={sec:orga7d0a82}]{Evolução dos rendimentos (I)}
 \begin{figure}[htb]
 \centering
 \caption{Rendimento médio real efetivo das pessoas ocupadas\\ Não desazonalizada} 
@@ -380,7 +380,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:orgce02e13}]{Evolução dos rendimentos (II)}
+\begin{frame}[label={sec:org9bc5777}]{Evolução dos rendimentos (II)}
 \begin{figure}[htb]
 \centering
 \caption{Massa de rendimento real habitual de todos os trabalhos} 
@@ -392,7 +392,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \alert{Memo:} Série anterior descontinuada
 \end{frame}
 
-\begin{frame}[label={sec:orge4e605d}]{Consumo das famílias}
+\begin{frame}[label={sec:orgd4850b0}]{Consumo das famílias}
 \begin{figure}[htb]
 \centering
 \caption{Consumo das famílias\\Jan/1995=100} 
@@ -402,7 +402,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgc4c25a8}]{Endividamento das famílias}
+\begin{frame}[label={sec:org2b1bd48}]{Endividamento das famílias}
 \begin{figure}[htb]
 \centering
 \caption{Endividamento das famílias\\em \% do PIB} 
@@ -413,18 +413,18 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc7a9050}]{Investimento público em recuperação}
+\begin{frame}[label={sec:org2868f60}]{Investimento público em recuperação}
 \alert{Dado:} Taxa de investimento público (\%PIB)
 \end{frame}
 
-\begin{frame}[label={sec:org678f90d}]{A evolução favorável da dívida pública}
+\begin{frame}[label={sec:org75c283f}]{A evolução favorável da dívida pública}
 \alert{Dado:} Evolução da dívida bruta e líquida (\%PIB)
 \end{frame}
 
-\begin{frame}[label={sec:orgaae9082}]{Superávit primário}
+\begin{frame}[label={sec:org810ffa2}]{Resultado primário do Governo Central}
 \end{frame}
 
-\begin{frame}[label={sec:orgbb5d0f3}]{Dívida líquida do setor público}
+\begin{frame}[label={sec:orgad7d032}]{Dívida líquida do setor público}
 \begin{figure}[htb]
 \centering
 \caption{Dívida líquida do Governo Federal e Banco Central\\em \% do PIB} 
@@ -436,7 +436,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 
 
 
-\begin{frame}[label={sec:org9c28bf8}]{Taxa de câmbio nominal}
+\begin{frame}[label={sec:org4fdeb90}]{Taxa de câmbio nominal}
 \begin{figure}[htb]
 \centering
 \caption{ Índice da taxa de câmbio efetiva nominal\\Jun/1994=100 } 
@@ -447,7 +447,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org33c41f7}]{Taxa de juros selic}
+\begin{frame}[label={sec:org369fbfb}]{Taxa de juros selic}
 \begin{figure}[htb]
 \centering
 \caption{Taxa de juros selic a.a. (efetivo x meta)\\Anualizada base 252} 
@@ -458,10 +458,10 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org3ac8ee9}]{Preços livres vs Administrados}
+\begin{frame}[label={sec:org36b6308}]{Preços livres vs Administrados}
 \end{frame}
 
-\begin{frame}[label={sec:org91eb2b1}]{Finalmente, inflação (ops, IPCA)}
+\begin{frame}[label={sec:org92537eb}]{Finalmente, inflação (ops, IPCA)}
 \alert{TODO:} Revisar IPCA
 
 \begin{figure}[htb]
