--- a/Materias/2S2020/PED_CE342/Turma_A/212883.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/212883.org
@@ -38,7 +38,7 @@
 
 Alguns pontos a serem destacados no início da sua resenha. Primeiramente, seria mais rigoroso dizer que o monetarismo é um escola e não um modelo. Por ser um questão menor não irei descontar nota em função disso. Seria interessante pontuar também o lugar dessa escola frente ao paradigma anterior (Síntese neoclássica). Mais ao fim, é colocado que os /ajustes econômicos/ formam expectativas adaptativas. Na verdade, são os *agentes*. A princípio, irei considerar como um erro de escrita. Caso isso persista ao longo da resenha (comento enquanto leio), considerarei como uma não compreensão do conceito.
 
-No parágrafo seguinte é descrito o fenômeno de ilusão monetária sem antes discutir às hipóteses associadas à ele. Como existe ilusão monetária se os efeitos da expansão monetária forem persistentes? Como haverá retorno ao nível de desemprego natural se a velocidade de circulação da moeda não for constante? As perguntas que pontuei anteriormente é para levantar a reflexão de que a ilusão monetária é mais uma implicação associada à outras hipóteses e menos uma hipótese por si só (como pareceu a partir do seu texto).
+No parágrafo seguinte é descrito o fenômeno de ilusão monetária sem antes discutir às hipóteses associadas à ele. Como existe ilusão monetária se os efeitos da expansão monetária forem persistentes? Como haverá retorno ao nível de desemprego natural se a velocidade de circulação da moeda não for constante? As perguntas que pontuei anteriormente são para levantar a reflexão de que a ilusão monetária é mais uma implicação associada à outras hipóteses e menos uma hipótese por si só (como pareceu a partir do seu texto).
 
 Mais rigorosamente, para que a taxa de desemprego seja persistentemente menor que a natural, é preciso que o governo amplie a demanda agregada também persistentemente. Como consequência, há surpresa inflacionária. Daí em diante você descreveu corretamente o raciocínio econômico.
 
