--- a/Materias/2S2020/PED_CE342/Turma_C/103034.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/103034.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 201326 - Leonardo Vitor da Silva
+#+TITLE: 103034 - Leonardo Augusto de Oliveira Piovesan
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 201326
-#+PROPERTY: NOME "Leonardo Vitor da Silva"
+#+PROPERTY: RA 103034
+#+PROPERTY: NOME "Leonardo Augusto de Oliveira Piovesan"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -23,15 +23,15 @@
 * Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido totalmente
-  :ARGUMENTO: Atingido satisfatoriamente
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido totalmente
   :CONCEITOS: Atingido parcialmente
   :DESENVOLVIMENTO: Atingido parcialmente
-  :CONCLUSAO: Atingido parcialmente
-  :CLAREZA:  Atingido satisfatoriamente
+  :CONCLUSAO: Atingindo minimamente
+  :CLAREZA:  Atingido totalmente
   :NOTA:     Atingido parcialmente
   :END:
 
 ** Comentários individuais 
 
-Gostei bastante dos seus parágrafos de abertura. No entanto, isso pode ter comprometido espaço da resenha. Além disso, há momentos em que utiliza uma linhagem pouco rigorosa como: "Friedman e sua turma". Entendo o que quis dizer, mas esta não é uma resenha opinativa nem informal. Nos parágrafos seguintes apresentou os conceitos corretamente, mas sugeriria uma linguagem mais objetiva (alguns adjetivos são usados sem rigor). Adiante, apresenta corretamente a implicação da TQM (inflação enquanto fenômeno monetário), mas pouco avançou na discussão teórica das hipóteses adjacentes à ela. Mais afrente, retoma a ideia de /trade-off/ entre inflação e desemprego. No entanto, vale lembrar que tal trade-off é condicional (ocorre na presença de inflação surpresa apenas).
+Em seu parágrafo de abertura, pontuou corretamente os principais elementos da teoria monetarista e a situou como um contraponto à escola keynesiana. Em seguida destacou que a TQM é retomada enquanto uma teoria da demanda por moeda. Poderia ter discutido mais implicações: estabilidade na demanda por moeda. Estes pontos estão no trecho citado, mas seria interessante que tivesse articulado tais ideias com as suas palavras. Adiante, apontou corretamente que a moeda é neutra no longo prazo, mas tem efeitos reais no curto. Adiante, exemplifica corretamente o fenômeno da ilusão monetária e os efeitos de curto prazo da política monetária. Na página seguinte, há um trecho cortado. Apresentou corretamente as formas que podem reduzir a taxa de desemprego (natural) por políticas do lado da oferta. De modo geral, discutiu corretamente os conceito, mas definiu pouco alguns deles (como taxa de desemprego natural). No parágrafo final, listou os pontos resumidos pelos autores mas encadeou pouco tais elementos. Por fim, não discutiu o principal ponto do texto: compreensão do regime de metas monetárias. Sua resenha esta boa, mas parece que esta supondo que o leitor conhece o texto que esta sendo resenhado. Isso é verdade na disciplina, mas costuma não ser o caso em outras situações.
