--- a/Materias/2S2020/PED_CE342/Turma_C/159866.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/159866.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 184528 - Maycon Jefferson Teodoro Bosing
+#+TITLE: 159866 - Marcela Chenfel Dos Anjos
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 184528
-#+PROPERTY: NOME "Maycon Jefferson Teodoro Bosing"
+#+PROPERTY: RA 159866
+#+PROPERTY: NOME "Marcela Chenfel Dos Anjos"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -24,14 +24,14 @@
   :PROPERTIES:
   :TAREFA:   Resenha 1
   :OBJETIVO: Atingido satisfatoriamente
-  :ARGUMENTO: Atingido parcialmente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingindo minimamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
   :CLAREZA:  Atingido parcialmente
   :NOTA:     Atingido parcialmente
   :END:
 
 ** Comentários individuais 
 
-Seus parágrafos de abertura situam bem as principais proposições da escola monetarista bem como sendo uma contraposição ao keynesianismo ortodoxo e fez uma contextualização histórica da perda de relevância desta escola. Adiante, destaca quais são os principais elementos teóricos dessa escola. Apresentou bem os argumentos associados à taxa natural de desemprego, mas poderia ter caprichado mais na caligrafia. Adiante, descreve corretamente o conceito de ilusão monetária, mas incorretamente os determinantes da inflação. Para os monetaristas, o aumento do nível de preços decorre do aumento do estoque de moeda acima da taxa de crescimento do produto e não a ampliação da oferta de trabalho. Em seguida, pontua corretamente que o trade-off entre inflação e desemprego não se verifica no curto prazo. Ao descrever a TQM, não a menciona enquanto uma teoria da demanda por moeda. Em seguida, pontua corretamente algumas das implicações do monetarismo. Vale destacar que o estoque de moeda deve *crescer* a mesma taxa que a taxa de crescimento do PIB e não que ambos estejam no mesmo nível. Além disso, a política monetária seria capaz de reduzir a taxa de desemprego para além da natural (essa sim próxima da taxa de pleno emprego), mas as custas de níveis de inflação crescentes na medida que a ilusão monetária não se esgota.
+O conceito de taxa natural de desemprego é corretamente apresentado. Poderia apenas ter mencionado que esta associados a fatores institucionais da economia. Adiante, é dito que a ilusão monetária altera a taxa natural de desemprego. Incorreto. A taxa natural de desemprego é alterada por elementos do lado da oferta e não pelos elementos da demanda. O que a ilusão monetária pode implicar é uma taxa de desemprego *efetiva* ser *temporariamente* menor que a natural. Ao final deste parágrafo dá a entender que você fez essa distinção. A confusão pode estar associada a redução do desemprego voluntário em função da ilusão monetária. Uma forma de verificar que isso não implica redução da taxa natural é que a ilusão monetária faz com que os agentes não consigam maximizar sua função objetivo e, portanto, não é compatível com a racionalidade. Desse modo, tal redução da taxa de desemprego efetiva para aquém da natural não é sustentável. Adiante, pontua corretamente a hipótese aceleracionista. No entanto, seria necessária explicar o porquê de variações no estoque de moeda causarem inflação. Para isso, é preciso descrever a TQM. Em seguida, é corretamente abordada a questão da defasagem da política monetária. No entanto, não é descrito o regime de metas monetárias (objetivo da resenha).
