--- a/Materias/2S2020/PED_CE342/Turma_C/172577.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/172577.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 184528 - Maycon Jefferson Teodoro Bosing
+#+TITLE: 172577 - Lucas Azevedo Soares
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 184528
-#+PROPERTY: NOME "Maycon Jefferson Teodoro Bosing"
+#+PROPERTY: RA 172577
+#+PROPERTY: NOME "Lucas Azevedo Soares"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -27,11 +27,11 @@
   :ARGUMENTO: Atingido parcialmente
   :CONCEITOS: Atingido parcialmente
   :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
-  :CLAREZA:  Atingido parcialmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido satisfatoriamente
   :NOTA:     Atingido parcialmente
   :END:
 
 ** Comentários individuais 
 
-Seus parágrafos de abertura situam bem as principais proposições da escola monetarista bem como sendo uma contraposição ao keynesianismo ortodoxo e fez uma contextualização histórica da perda de relevância desta escola. Adiante, destaca quais são os principais elementos teóricos dessa escola. Apresentou bem os argumentos associados à taxa natural de desemprego, mas poderia ter caprichado mais na caligrafia. Adiante, descreve corretamente o conceito de ilusão monetária, mas incorretamente os determinantes da inflação. Para os monetaristas, o aumento do nível de preços decorre do aumento do estoque de moeda acima da taxa de crescimento do produto e não a ampliação da oferta de trabalho. Em seguida, pontua corretamente que o trade-off entre inflação e desemprego não se verifica no curto prazo. Ao descrever a TQM, não a menciona enquanto uma teoria da demanda por moeda. Em seguida, pontua corretamente algumas das implicações do monetarismo. Vale destacar que o estoque de moeda deve *crescer* a mesma taxa que a taxa de crescimento do PIB e não que ambos estejam no mesmo nível. Além disso, a política monetária seria capaz de reduzir a taxa de desemprego para além da natural (essa sim próxima da taxa de pleno emprego), mas as custas de níveis de inflação crescentes na medida que a ilusão monetária não se esgota.
+Em seu parágrafo inicial, corretamente coloca o regime de metas enquanto uma das formas de condução da política monetária mais utilizada atualmente. No entanto, não está correto a atribuição que fez ao monetarismo. Adiante, pontua corretamente que inflação é entendida enquanto um fenômeno monetário e que só pode ser controlada se a oferta crescer junto a demanda. No entanto, não especificou qual oferta se referia (bens e serviços? estoque de moeda?). Em seguida, descreveu corretamente taxa de desemprego natural e ilusão monetária e as associou às expectativas adaptativas e à inflação-surpresa. Adiante, pontuou que a moeda é neutra no longo prazo. Esta correto. No entanto, seria necessário lançar mão da TQM para chegar nessa conclusão. Apenas para ilustrar a importância da TQM: como que variações no estoque de moeda causam inflação? Em seguida, destacou a oposição à discricionariedade de política monetária, mas é pouco preciso ao descrever a regra monetária (qual agregado econômico? Consumo das famílias, por exemplo, é um agregado econômico). Adiante conclui especificando melhor esse ponto. Por fim, cabe a menção de que a TQM mal foi discutida em sua resenha.
