--- a/Materias/2S2020/PED_CE342/Turma_C/177964.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/177964.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 201326 - Leonardo Vitor da Silva
+#+TITLE: 177964 - Victor Duarte
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 201326
-#+PROPERTY: NOME "Leonardo Vitor da Silva"
+#+PROPERTY: RA 177964
+#+PROPERTY: NOME "Victor Duarte"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -23,15 +23,15 @@
 * Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido totalmente
+  :OBJETIVO: Atingido satisfatoriamente
   :ARGUMENTO: Atingido satisfatoriamente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido totalmente
   :CONCLUSAO: Atingido parcialmente
   :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido parcialmente
+  :NOTA:     Atingido satisfatoriamente
   :END:
 
 ** Comentários individuais 
 
-Gostei bastante dos seus parágrafos de abertura. No entanto, isso pode ter comprometido espaço da resenha. Além disso, há momentos em que utiliza uma linhagem pouco rigorosa como: "Friedman e sua turma". Entendo o que quis dizer, mas esta não é uma resenha opinativa nem informal. Nos parágrafos seguintes apresentou os conceitos corretamente, mas sugeriria uma linguagem mais objetiva (alguns adjetivos são usados sem rigor). Adiante, apresenta corretamente a implicação da TQM (inflação enquanto fenômeno monetário), mas pouco avançou na discussão teórica das hipóteses adjacentes à ela. Mais afrente, retoma a ideia de /trade-off/ entre inflação e desemprego. No entanto, vale lembrar que tal trade-off é condicional (ocorre na presença de inflação surpresa apenas).
+Elenca corretamente os principais elementos da escola monetarista e o faz retomando tanto a curva de Phillips quanto a TQM. A seguir, descreve corretamente as implicações da ilusão monetária, mas não a define. Adiante, corretamente pontua que o trade-off entre inflação e desemprego não é verificado no longo prazo. Em seguida, pontua a neutralidade da moeda enquanto pressuposto da TQM sendo que é uma implicação das as hipóteses a ela associadas (demanda por moeda é estável). Logo depois pontua outros pontos contra a discricionariedade de política monetária. No entanto, não é mencionado que tal ativismo monetário implica inflação apenas e nem qual a origem da inflação (apenas é dito que é um fenômeno monetário). Conclui corretamente a respeito das regras monetárias mas pouco avança em sua explicitação (estoque de moeda deve crescer a mesma taxa que o PIB).
