--- a/Materias/2S2020/PED_CE342/Turma_C/205149.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/205149.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 201326 - Leonardo Vitor da Silva
+#+TITLE: 205149 - Raphaela Freitas Souza
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 201326
-#+PROPERTY: NOME "Leonardo Vitor da Silva"
+#+PROPERTY: RA 205149
+#+PROPERTY: NOME "Raphaela Freitas Souza"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -25,13 +25,13 @@
   :TAREFA:   Resenha 1
   :OBJETIVO: Atingido totalmente
   :ARGUMENTO: Atingido satisfatoriamente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido parcialmente
-  :CONCLUSAO: Atingido parcialmente
-  :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido parcialmente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
   :END:
 
 ** Comentários individuais 
 
-Gostei bastante dos seus parágrafos de abertura. No entanto, isso pode ter comprometido espaço da resenha. Além disso, há momentos em que utiliza uma linhagem pouco rigorosa como: "Friedman e sua turma". Entendo o que quis dizer, mas esta não é uma resenha opinativa nem informal. Nos parágrafos seguintes apresentou os conceitos corretamente, mas sugeriria uma linguagem mais objetiva (alguns adjetivos são usados sem rigor). Adiante, apresenta corretamente a implicação da TQM (inflação enquanto fenômeno monetário), mas pouco avançou na discussão teórica das hipóteses adjacentes à ela. Mais afrente, retoma a ideia de /trade-off/ entre inflação e desemprego. No entanto, vale lembrar que tal trade-off é condicional (ocorre na presença de inflação surpresa apenas).
+Pontuou corretamente o importância da TQM na escola monetarista e a associa corretamente ao embasamento das regras monetárias. Em seguida, contextualizou a evolução deste constructo teórico historicamente. Adiante, contextualiza corretamente a importância da curva de Phillips aceleracionista e sua relação com a TQM e subsequente negação do trade-off entre inflação e desemprego. Poderia ter descrito melhor o encadeamento que leva a tal resultado. Em seguida, apresenta corretamente o conceito de taxa natural de desemprego. Poderia apenas a ter relacionado com elementos institucionais da economia. Descreve corretamente a ilusão monetária. De modo geral tenho poucos comentários pontuais. Senti falta apenas de uma maior discussão a cerca da TQM e suas hipóteses, mas a forma que construiu o texto indicou que compreendeu suas implicações.
