--- a/Materias/2S2020/PED_CE342/Turma_C/205151.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/205151.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 201326 - Leonardo Vitor da Silva
+#+TITLE: 205151 - Raphaela Prado Francisco
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 201326
-#+PROPERTY: NOME "Leonardo Vitor da Silva"
+#+PROPERTY: RA 205151
+#+PROPERTY: NOME "Raphaela Prado Francisco"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -22,16 +22,16 @@
 
 * Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
-  :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido totalmente
+  :TAREFA:
+  :OBJETIVO: Atingido satisfatoriamente
   :ARGUMENTO: Atingido satisfatoriamente
-  :CONCEITOS: Atingido parcialmente
+  :CONCEITOS: Atingido satisfatoriamente
   :DESENVOLVIMENTO: Atingido parcialmente
-  :CONCLUSAO: Atingido parcialmente
+  :CONCLUSAO: Atingido totalmente
   :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido parcialmente
+  :NOTA:     Atingindo minimamente
   :END:
 
 ** Comentários individuais 
 
-Gostei bastante dos seus parágrafos de abertura. No entanto, isso pode ter comprometido espaço da resenha. Além disso, há momentos em que utiliza uma linhagem pouco rigorosa como: "Friedman e sua turma". Entendo o que quis dizer, mas esta não é uma resenha opinativa nem informal. Nos parágrafos seguintes apresentou os conceitos corretamente, mas sugeriria uma linguagem mais objetiva (alguns adjetivos são usados sem rigor). Adiante, apresenta corretamente a implicação da TQM (inflação enquanto fenômeno monetário), mas pouco avançou na discussão teórica das hipóteses adjacentes à ela. Mais afrente, retoma a ideia de /trade-off/ entre inflação e desemprego. No entanto, vale lembrar que tal trade-off é condicional (ocorre na presença de inflação surpresa apenas).
+Entregue digitada.
