--- a/Materias/2S2020/PED_CE342/Turma_C/206806.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/206806.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 201326 - Leonardo Vitor da Silva
+#+TITLE: 206806 - Vinicius Jeronimo Capodalio
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 201326
-#+PROPERTY: NOME "Leonardo Vitor da Silva"
+#+PROPERTY: RA 206806
+#+PROPERTY: NOME "Vinicius Jeronimo Capodalio"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -20,18 +20,18 @@
   #+BEGIN: columnview :maxlevel 3 :id global
   #+END
 
-* Resenha 1: Monetaristas                                           :private:
+* Resenha 1:  Monetaristas                                          :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido totalmente
+  :OBJETIVO: Atingido satisfatoriamente
   :ARGUMENTO: Atingido satisfatoriamente
   :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
   :CONCLUSAO: Atingido parcialmente
   :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido parcialmente
+  :NOTA:     Atingido satisfatoriamente
   :END:
 
 ** Comentários individuais 
 
-Gostei bastante dos seus parágrafos de abertura. No entanto, isso pode ter comprometido espaço da resenha. Além disso, há momentos em que utiliza uma linhagem pouco rigorosa como: "Friedman e sua turma". Entendo o que quis dizer, mas esta não é uma resenha opinativa nem informal. Nos parágrafos seguintes apresentou os conceitos corretamente, mas sugeriria uma linguagem mais objetiva (alguns adjetivos são usados sem rigor). Adiante, apresenta corretamente a implicação da TQM (inflação enquanto fenômeno monetário), mas pouco avançou na discussão teórica das hipóteses adjacentes à ela. Mais afrente, retoma a ideia de /trade-off/ entre inflação e desemprego. No entanto, vale lembrar que tal trade-off é condicional (ocorre na presença de inflação surpresa apenas).
+Inicia a resenha fazendo uma contextualização do autor do texto a ser resenhado. Em seguida, pontua corretamente a principal implicação de política econômica monetarista e sua forma. No parágrafo seguinte pontua as principais hipóteses monetaristas em que não mencionou a TQM. Adiante, descreve corretamente o conceito de taxa natural de desemprego. Em seguida, destaca algumas das medidas que podem ser adotadas para que tal taxa possa ser menor (em especial, medidas supply-side). Mais a frente, faz uma contextualização histórica da curva de Phillips e pontua que na ausência de distúrbios monetários, a taxa de desemprego efetiva é igual a natural. No entanto, não descreve a ilusão monetária. Inicia o parágrafo seguinte elencando uma implicação da TQM, mas não há menção a esse conceito. Em seguida, começa descrever o conceito e implicações da ilusão monetária. Ao fim, destaca a hipótese aceleracionista. Vale ressaltar que não retomou a proposição do regime de regras monetárias e, de modo geral, não explicou os determinantes da inflação.
