--- a/Materias/2S2020/PED_CE342/Turma_C/221896.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/221896.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 201326 - Leonardo Vitor da Silva
+#+TITLE: 221896 - Mariana Sayuri Silva Doi
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 201326
-#+PROPERTY: NOME "Leonardo Vitor da Silva"
+#+PROPERTY: RA 221896
+#+PROPERTY: NOME "Mariana Sayuri Silva Doi"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -24,14 +24,14 @@
   :PROPERTIES:
   :TAREFA:   Resenha 1
   :OBJETIVO: Atingido totalmente
-  :ARGUMENTO: Atingido satisfatoriamente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido parcialmente
-  :CONCLUSAO: Atingido parcialmente
-  :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido parcialmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido satisfatoriamente
   :END:
 
 ** Comentários individuais 
 
-Gostei bastante dos seus parágrafos de abertura. No entanto, isso pode ter comprometido espaço da resenha. Além disso, há momentos em que utiliza uma linhagem pouco rigorosa como: "Friedman e sua turma". Entendo o que quis dizer, mas esta não é uma resenha opinativa nem informal. Nos parágrafos seguintes apresentou os conceitos corretamente, mas sugeriria uma linguagem mais objetiva (alguns adjetivos são usados sem rigor). Adiante, apresenta corretamente a implicação da TQM (inflação enquanto fenômeno monetário), mas pouco avançou na discussão teórica das hipóteses adjacentes à ela. Mais afrente, retoma a ideia de /trade-off/ entre inflação e desemprego. No entanto, vale lembrar que tal trade-off é condicional (ocorre na presença de inflação surpresa apenas).
+Em seu parágrafo de abertura, destaca corretamente a principal proposição de política econômica do monetarismo. Em seguida, pontua corretamente as principais hipóteses desta escola. Adiante, define a taxa de desemprego correta e rigorosamente. No parágrafo seguinte, pontua a curva de Phillips aceleracionista, mas não descreve suas implicações. Também descreve corretamente os efeitos da inflação-surpresa e ilusão monetária. No entanto, para chegar a conclusão de que variações no estoque de moeda implica inflação, seria necessário lançar mão da TQM e suas hipóteses/implicações. Adiante, descreve a hipótese aceleracionista e a contraindicação da discricionaridade da política monetária. Destaca a recomendação de regras monetárias, mas poderia ser mais preciso na colocação de qual "agregado monetário" deve-se ancorar a política monetária. Em seguida, pontua a importância da TQM, mas pouco se aprofunda nas hipóteses e implicações, dentre elas, estabilidade na demanda por moeda.
