--- a/Materias/2S2020/PED_CE342/Turma_C/225851.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/225851.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 184528 - Maycon Jefferson Teodoro Bosing
+#+TITLE: 225851 - William de Souza Rabelo
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 184528
-#+PROPERTY: NOME "Maycon Jefferson Teodoro Bosing"
+#+PROPERTY: RA 225851
+#+PROPERTY: NOME "William de Souza Rabelo"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -23,15 +23,17 @@
 * Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido satisfatoriamente
-  :ARGUMENTO: Atingido parcialmente
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
   :CONCEITOS: Atingido parcialmente
   :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
-  :CLAREZA:  Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
   :NOTA:     Atingido parcialmente
   :END:
 
 ** Comentários individuais 
 
-Seus parágrafos de abertura situam bem as principais proposições da escola monetarista bem como sendo uma contraposição ao keynesianismo ortodoxo e fez uma contextualização histórica da perda de relevância desta escola. Adiante, destaca quais são os principais elementos teóricos dessa escola. Apresentou bem os argumentos associados à taxa natural de desemprego, mas poderia ter caprichado mais na caligrafia. Adiante, descreve corretamente o conceito de ilusão monetária, mas incorretamente os determinantes da inflação. Para os monetaristas, o aumento do nível de preços decorre do aumento do estoque de moeda acima da taxa de crescimento do produto e não a ampliação da oferta de trabalho. Em seguida, pontua corretamente que o trade-off entre inflação e desemprego não se verifica no curto prazo. Ao descrever a TQM, não a menciona enquanto uma teoria da demanda por moeda. Em seguida, pontua corretamente algumas das implicações do monetarismo. Vale destacar que o estoque de moeda deve *crescer* a mesma taxa que a taxa de crescimento do PIB e não que ambos estejam no mesmo nível. Além disso, a política monetária seria capaz de reduzir a taxa de desemprego para além da natural (essa sim próxima da taxa de pleno emprego), mas as custas de níveis de inflação crescentes na medida que a ilusão monetária não se esgota.
+No parágrafo de abertura, contextualiza o monetarismo enquanto um contraponto ao keynesianismo ortodoxo. Adiante, apresenta corretamente o conceito de taxa natural de desemprego e explicita que não contempla o desemprego involuntário. Em seguida, pontua corretamente quais a medidas (supply-side) para que a taxa natural de desemprego seja reduzida. Da forma que apresentou a curva de Phillips original, da a entender que esta é a origem das expectativas adaptativas. Adiante, descreve corretamente o fenômeno da ilusão monetária. No entanto, cabe pontuar que não é explicado o porquê de variações no estoque de moeda implicarem inflação. Para isso, seria necessário lançar mão da TQM e suas implicações (sistema econômico e demanda por moeda estável). Adiante, não deixa claro que o trade-off entre inflação e desemprego é valido no curto prazo apenas enquanto no longo prazo a moeda é neutra. Por fim, vale destacar que não pontuou a recomendação do regime de regras monetárias (objetivo da resenha) nem os determinantes da inflação (como mencionado).
+
+
