--- a/Materias/2S2020/PED_CE342/Turma_C/234982.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/234982.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 201326 - Leonardo Vitor da Silva
+#+TITLE: 234982 - Gabriel Pereira Santos
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 201326
-#+PROPERTY: NOME "Leonardo Vitor da Silva"
+#+PROPERTY: RA 23498
+#+PROPERTY: NOME "Nome"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -22,16 +22,17 @@
 
 * Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
-  :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido totalmente
-  :ARGUMENTO: Atingido satisfatoriamente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido parcialmente
-  :CONCLUSAO: Atingido parcialmente
-  :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido parcialmente
+  :TAREFA:
+  :OBJETIVO:
+  :ARGUMENTO:
+  :CONCEITOS:
+  :DESENVOLVIMENTO:
+  :CONCLUSAO:
+  :CLAREZA:
+  :NOTA:
   :END:
 
 ** Comentários individuais 
 
-Gostei bastante dos seus parágrafos de abertura. No entanto, isso pode ter comprometido espaço da resenha. Além disso, há momentos em que utiliza uma linhagem pouco rigorosa como: "Friedman e sua turma". Entendo o que quis dizer, mas esta não é uma resenha opinativa nem informal. Nos parágrafos seguintes apresentou os conceitos corretamente, mas sugeriria uma linguagem mais objetiva (alguns adjetivos são usados sem rigor). Adiante, apresenta corretamente a implicação da TQM (inflação enquanto fenômeno monetário), mas pouco avançou na discussão teórica das hipóteses adjacentes à ela. Mais afrente, retoma a ideia de /trade-off/ entre inflação e desemprego. No entanto, vale lembrar que tal trade-off é condicional (ocorre na presença de inflação surpresa apenas).
+Foi resenhado o capítulo sobre os Novo-Clássicos. A nota será zero por não cumprir os objetivos da atividade proposta. Ademais, caso fosse dada a oportunidade da entrega da resenha dos monetaristas na data prevista para a resenha dos Novo-Clássicos, estaria sendo injusto com os demais alunos tendo em vista que seria uma resenha após a aula sobre o tema.
+
