--- a/Materias/2S2020/PED_CE342/Turma_C/244207.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/244207.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 184528 - Maycon Jefferson Teodoro Bosing
+#+TITLE: 244207 - Sanny Alves Dos Santos
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 184528
-#+PROPERTY: NOME "Maycon Jefferson Teodoro Bosing"
+#+PROPERTY: RA 244207
+#+PROPERTY: NOME "Sanny Alves Dos Santos"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -24,14 +24,14 @@
   :PROPERTIES:
   :TAREFA:   Resenha 1
   :OBJETIVO: Atingido satisfatoriamente
-  :ARGUMENTO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
   :CONCEITOS: Atingido parcialmente
   :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
-  :CLAREZA:  Atingido parcialmente
-  :NOTA:     Atingido parcialmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido satisfatoriamente
   :END:
 
 ** Comentários individuais 
 
-Seus parágrafos de abertura situam bem as principais proposições da escola monetarista bem como sendo uma contraposição ao keynesianismo ortodoxo e fez uma contextualização histórica da perda de relevância desta escola. Adiante, destaca quais são os principais elementos teóricos dessa escola. Apresentou bem os argumentos associados à taxa natural de desemprego, mas poderia ter caprichado mais na caligrafia. Adiante, descreve corretamente o conceito de ilusão monetária, mas incorretamente os determinantes da inflação. Para os monetaristas, o aumento do nível de preços decorre do aumento do estoque de moeda acima da taxa de crescimento do produto e não a ampliação da oferta de trabalho. Em seguida, pontua corretamente que o trade-off entre inflação e desemprego não se verifica no curto prazo. Ao descrever a TQM, não a menciona enquanto uma teoria da demanda por moeda. Em seguida, pontua corretamente algumas das implicações do monetarismo. Vale destacar que o estoque de moeda deve *crescer* a mesma taxa que a taxa de crescimento do PIB e não que ambos estejam no mesmo nível. Além disso, a política monetária seria capaz de reduzir a taxa de desemprego para além da natural (essa sim próxima da taxa de pleno emprego), mas as custas de níveis de inflação crescentes na medida que a ilusão monetária não se esgota.
+Corretamente pontuou que no monetarismo a estabilidade de nível de preços pressupõe estabilidade no estoque de moeda. No entanto, não associou esta conclusão aos pressupostos teóricos do modelo (TQM). Além disso, a forma que descreve a regra monetária esta pouco precisa: estoque de moeda deve crescer a mesma taxa que o PIB. Adiante, elenca alguns dos principais conceitos do monetarismo, deixando a TQM de fora. Resultado disso é tratar a neutralidade da moeda enquanto pressuposto e não enquanto resultado do modelo. Descreveu corretamente o conceito de taxa natural de desemprego. Apresentou alguns dos componentes da curva de Phillips aceleracionista, mas não pontou que implica negação do trade-off inflação e desemprego no longo prazo. Apresenta corretamente a hipótese de expectativas adaptativas e o mesmo vale para a ilusão monetária e surpresa inflacionária. Apresenta TQM sem expor suas hipóteses e implicações: teoria da demanda por moeda que é estável. Encerra a resenha pontuando (de forma mais precisa) a proposição do regime de regras monetárias.
