--- a/Materias/2S2020/PED_CE342/Turma_C/245099.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/245099.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 184528 - Maycon Jefferson Teodoro Bosing
+#+TITLE: 245099 - Victor Maia
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 184528
-#+PROPERTY: NOME "Maycon Jefferson Teodoro Bosing"
+#+PROPERTY: RA 245099
+#+PROPERTY: NOME "Victor Maia"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -26,12 +26,13 @@
   :OBJETIVO: Atingido satisfatoriamente
   :ARGUMENTO: Atingido parcialmente
   :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
-  :CLAREZA:  Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
   :NOTA:     Atingido parcialmente
   :END:
 
 ** Comentários individuais 
 
-Seus parágrafos de abertura situam bem as principais proposições da escola monetarista bem como sendo uma contraposição ao keynesianismo ortodoxo e fez uma contextualização histórica da perda de relevância desta escola. Adiante, destaca quais são os principais elementos teóricos dessa escola. Apresentou bem os argumentos associados à taxa natural de desemprego, mas poderia ter caprichado mais na caligrafia. Adiante, descreve corretamente o conceito de ilusão monetária, mas incorretamente os determinantes da inflação. Para os monetaristas, o aumento do nível de preços decorre do aumento do estoque de moeda acima da taxa de crescimento do produto e não a ampliação da oferta de trabalho. Em seguida, pontua corretamente que o trade-off entre inflação e desemprego não se verifica no curto prazo. Ao descrever a TQM, não a menciona enquanto uma teoria da demanda por moeda. Em seguida, pontua corretamente algumas das implicações do monetarismo. Vale destacar que o estoque de moeda deve *crescer* a mesma taxa que a taxa de crescimento do PIB e não que ambos estejam no mesmo nível. Além disso, a política monetária seria capaz de reduzir a taxa de desemprego para além da natural (essa sim próxima da taxa de pleno emprego), mas as custas de níveis de inflação crescentes na medida que a ilusão monetária não se esgota.
+Descreve corretamente o conceito de taxa natural de desemprego e o associa a curva de Phillips anterior à Friedman. Adiante, pontua a adição das expectativas dos agentes no modelo. No entanto, não descreve que tipo de expectativas são essas, por que desajustes salariais impactam o nível de emprego e nem a temporalidade dos efeitos desse desajuste. Adiante, menciona a ilusão monetária mas não a define. Ademais, não explica o porquê que expansões no estoque de moeda geram inflação. Para tanto, seria necessário apresentar a TQM e suas hipóteses subjacentes. Em seguida, pontua outros motivos do porquê a política monetária não deve ser discricionária. No parágrafo seguinte é mencionado que o sistema econômico seria estável, mas não estão presentes no texto os elementos para chegar a esse resultado (dica: TQM e subsequente estabilidade na demanda por moeda). Ao fim, é mencionada da TQM e suas implicações. Dada a importância deste constructo para os argumentos monetaristas, tal debate poderia ter sido antecipado. Por fim, não explicitado como deve ser a regra monetária a ser seguida (como devem se comportar os agregados monetários? devem crescer a mesma taxa que o PIB como sugere a TQM).
+
