--- a/Materias/2S2020/PED_CE342/Turma_C/257876.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/257876.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 201326 - Leonardo Vitor da Silva
+#+TITLE: 257876 - Maryana Beatriz Ventura De Carvalho
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 201326
-#+PROPERTY: NOME "Leonardo Vitor da Silva"
+#+PROPERTY: RA 257876
+#+PROPERTY: NOME "Nome"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -22,16 +22,16 @@
 
 * Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
-  :TAREFA:   Resenha 1
+  :TAREFA:
   :OBJETIVO: Atingido totalmente
-  :ARGUMENTO: Atingido satisfatoriamente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido parcialmente
-  :CONCLUSAO: Atingido parcialmente
-  :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido parcialmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
   :END:
 
 ** Comentários individuais 
 
-Gostei bastante dos seus parágrafos de abertura. No entanto, isso pode ter comprometido espaço da resenha. Além disso, há momentos em que utiliza uma linhagem pouco rigorosa como: "Friedman e sua turma". Entendo o que quis dizer, mas esta não é uma resenha opinativa nem informal. Nos parágrafos seguintes apresentou os conceitos corretamente, mas sugeriria uma linguagem mais objetiva (alguns adjetivos são usados sem rigor). Adiante, apresenta corretamente a implicação da TQM (inflação enquanto fenômeno monetário), mas pouco avançou na discussão teórica das hipóteses adjacentes à ela. Mais afrente, retoma a ideia de /trade-off/ entre inflação e desemprego. No entanto, vale lembrar que tal trade-off é condicional (ocorre na presença de inflação surpresa apenas).
+Inicia a resenha com uma excelente contextualização histórica dos estudos da moeda e estabeleceu uma ponte entre a TQM clássica e à de Friedman. Adiante, descreve corretamente os determinantes da inflação a partir da TQM. Também associa corretamente a TQM ao fundamento teórico das regras monetárias, situando tal constructo teórico no centro. Adiante é feito uma contextualização das diferentes etapas na construção da curva de Phillips. No mesmo parágrafo é mencionada a ilusão monetária, mas não é definida (mas dá a entender que compreendeu este conceito pela explicação). Adiante, contextualiza a curva de Phillips aceleracionista em função da estagflação. Em seguida, destaca corretamente que o trade-off entre inflação e desemprego só é válido no curto prazo. Ao fim, retoma a proposição de regras monetárias mas não explicita como os agregados monetários devem se comportar. No entanto, isso já havia ficado claro na introdução. Excelente resenha!
