--- a/Readings/Panel.bib
+++ b/Readings/Panel.bib
@@ -191,6 +191,8 @@
   publisher    = {Universidad Nacional de Colombia}
 }
 
+
+
 @Article{Maddala_UR_1999,
   author       = {Maddala, G. S. and Wu, Shaowen},
   title	       = {A Comparative Study of Unit Root Tests with Panel Data and a New Simple Test},
@@ -236,7 +238,7 @@
   publisher    = {Wiley}
 }
 
-@Article{Bezemer_2015,
+@Article{Bezemer_Mortgages_2015,
   author       = {Bezemer, Dirk and Grydaki, Maria and Zhang, Lu},
   title	       = {MORE MORTGAGES, LOWER GROWTH?},
   year	       = 2015,
@@ -371,6 +373,23 @@
   doi	       = {10.1111/1540-6229.00714},
   url	       = {http://dx.doi.org/10.1111/1540-6229.00714},
   journal      = {Real Estate Economics},
+  publisher    = {Wiley}
+}
+
+@Article{Fiebiger_External_2017,
+  author       = {Fiebiger, Brett and Lavoie, Marc},
+  title	       = {Trend and business cycles with external markets  :
+                  Non‐capacity generating semi‐autonomous expenditures
+                  and effective demand},
+  year	       = 2017,
+  volume       = 70,
+  number       = 2,
+  month	       = {Nov},
+  pages	       = {247–262},
+  issn	       = {1467-999X},
+  doi	       = {10.1111/meca.12192},
+  url	       = {http://dx.doi.org/10.1111/meca.12192},
+  journal      = {Metroeconomica},
   publisher    = {Wiley}
 }
 
