--- a/Materias/2S2020/PED_CE342/Turma_A/232796.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/232796.org
@@ -29,7 +29,7 @@
   :DESENVOLVIMENTO: Atingido totalmente
   :CONCLUSAO: Atingido satisfatoriamente
   :CLAREZA:  Atingido totalmente
-  :NOTA:     Atingido totalmente
+  :NOTA:     Atingido satisfatoriamente
   :END:
 
 ** Comentários individuais 
