--- a/Materias/2S2020/PED_CE342/Turma_C/257932.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/257932.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 201326 - Leonardo Vitor da Silva
+#+TITLE: 257932 - Thaís Monello De Oliveira
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 201326
-#+PROPERTY: NOME "Leonardo Vitor da Silva"
+#+PROPERTY: RA 257932
+#+PROPERTY: NOME "Thaís Monello De Oliveira"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -24,14 +24,15 @@
   :PROPERTIES:
   :TAREFA:   Resenha 1
   :OBJETIVO: Atingido totalmente
-  :ARGUMENTO: Atingido satisfatoriamente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido parcialmente
-  :CONCLUSAO: Atingido parcialmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido totalmente
   :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido parcialmente
+  :NOTA:     Atingido totalmente
   :END:
 
 ** Comentários individuais 
 
-Gostei bastante dos seus parágrafos de abertura. No entanto, isso pode ter comprometido espaço da resenha. Além disso, há momentos em que utiliza uma linhagem pouco rigorosa como: "Friedman e sua turma". Entendo o que quis dizer, mas esta não é uma resenha opinativa nem informal. Nos parágrafos seguintes apresentou os conceitos corretamente, mas sugeriria uma linguagem mais objetiva (alguns adjetivos são usados sem rigor). Adiante, apresenta corretamente a implicação da TQM (inflação enquanto fenômeno monetário), mas pouco avançou na discussão teórica das hipóteses adjacentes à ela. Mais afrente, retoma a ideia de /trade-off/ entre inflação e desemprego. No entanto, vale lembrar que tal trade-off é condicional (ocorre na presença de inflação surpresa apenas).
+Em seu parágrafo de abertura, pontua corretamente a principal proposição de política econômica do monetarismo bem com as hipóteses associadas a ela. No entanto, faltou a menção à TQM. Em seguida, descreve corretamente a taxa natural de desemprego e contrapõe ao keynesianismo ortodoxo. Descreve corretamente as diferentes versões da curva de Phillips, mas não é indicado o porquê de taxa de desemprego estar abaixo da natural estar associada às expectativas de inflação não correspondidas. No parágrafo seguinte discute esse ponto. Uma questão que não foi abordada é o porquê de mudanças no estoque de moeda implicam inflação. Para tanto, seria necessário lançar mão da TQM. Corretamente descreve a ilusão monetária  e hipótese aceleracionista. Adiante descreve corretamente a TQM e suas implicações. Poderia apenas ter antecipado essa discussão dada a importância para explicar as causas da inflação. Em seguida, poderia ser mais enfática ao pontuar qual a proposição do regime de regras monetárias: estoque de moeda (exógeno) deve crescer a mesma taxa que o PIB. Uma vez que tal discussão já foi pontuada na introdução, é apenas um preciosismo. 
+
